2011-04-03  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdf.R: Fix bug with fontsize (thanks Carlos!)

2011-02-18  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdroplist.R: change to how selected= argument handled. Can be
	a string with one of the values now.

2011-01-19  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gwindow.R (addHandlerDestroy): fixed issue with destroy
	call (the default handler). Also cleaned up addHanderUnrealize
	method. (Thanks again to Richie C.)

	* R/gedit.R: fixed up handler code to call that in R5
	classes. Also tidied up gradio, gcheckboxgroup. (Thanks to Richie
	C. for pointing out the issue.)

	* R/aaaR5classes.R: fixed bug in remove_handler

2011-01-17  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaaGenerics.R: worked on "add" method and its expand, fill,
	anchor arguments

2011-01-10  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdroplist.R: fix for width if no intial items

2011-01-07  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaaGenerics.R: fixed addHandlerRightClick. Thanks Marie V

2011-01-05  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaaR5classes.R: can use "command" signal, not just tkbind.

	* R/gslider.R: using ttk::scale for themed widget. We give up the
	theme, but canuse the "command" binding.

2011-01-04  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gwindow.R: new method update to get window to naturally resize

	* R/glayout.R: added dim method

2011-01-02  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcheckboxgroup.R: similar to gradio. Now based on R5 class

	* R/gradio.R: based on R5 class now, not on older. Allows one to
	extend/shorten length of radio group

2010-12-30  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gaction.R: added key.accel value. key.accel should be like "Control-a"
